--- a/style.css
+++ b/style.css
@@ -2,3 +2,46 @@
     background-color: white;
     box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.25);
 }
+
+section{
+    padding-top: 128px;
+}
+
+.home h1{
+    font-size: 72px;
+}
+
+.home h2{
+    font-size: 48px;
+}
+
+.btn.button{
+    border: 3px solid black;
+    border-radius: 24px;
+}
+
+.btn.button:hover{
+    border: 3px solid black;
+    background-color: black;
+    color: white;
+}
+
+.home .arrow img{
+    width: 60px;
+}
+
+#arrow{
+    animation: 1.5s upDown infinite;
+}
+
+@keyframes upDown {
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
