--- a/style.css
+++ b/style.css
@@ -4,9 +4,21 @@
 }
 
 section{
-    padding-top: 128px;
+    padding-top: 70px;
+    position: relative;
 }
 
+section::before{
+    z-index: -1;
+    content: '';
+    font-size: 72px;
+    font-weight: 700;
+    color: gray;
+    opacity: 0.25;
+    position: absolute;
+    top: -25px;
+    left: -40px;
+}
 .home h1{
     font-size: 72px;
 }
@@ -20,7 +32,7 @@ section{
     border-radius: 24px;
 }
 
-.btn.button:hover{
+.btn.button:hover, .btn.button.active{
     border: 3px solid black;
     background-color: black;
     color: white;
@@ -44,4 +56,22 @@ section{
     100%{
         transform: translateY(0);
     }
+}
+
+.about::before{
+    content: 'About';
+}
+
+.about-exp{
+    margin-top: 24px;
+}
+
+.about-exp-item-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-exp-item-detail{
+    display: none;
 }
