--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ section::before{
     top: -25px;
     left: -40px;
 }
+
+/* Home Start */
 .home h1{
     font-size: 72px;
 }
@@ -57,7 +59,9 @@ section::before{
         transform: translateY(0);
     }
 }
+/* Home End */
 
+/* About Start */
 .about::before{
     content: 'About';
 }
@@ -75,3 +79,66 @@ section::before{
 .about-exp-item-detail{
     display: none;
 }
+/* About End */
+
+/* Work Start */
+.work::before{
+    content: 'Work';
+
+}
+
+.work-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "work-1 work-2" "work-3 work-3";
+    gap: 16px;
+}
+
+#work-1{
+    grid-area: work-1;
+}
+
+#work-1:hover::after{
+    content: 'Web Developer';
+}
+
+#work-2{
+    grid-area: work-2;
+}
+
+#work-2:hover::after{
+    content: 'Apps Developer';
+}
+
+#work-3{
+    grid-area: work-3;
+}
+
+#work-3:hover::after{
+    content: 'UI/UX Desain';
+}
+
+.work-img img{
+    width: 100%;
+}
+
+.work-img-item{
+    position: relative;
+}
+
+.work-img-item:hover::after{
+    content: 'Hello';
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 24px;
+}
+/* Work End */
