--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ section::before{
 }
 
 .btn.button{
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 24px;
 }
 
@@ -136,7 +136,7 @@ section::before{
 }
 
 .work-img-item:hover::after{
-    content: 'Hello';
+    content: '';
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
@@ -192,4 +192,26 @@ section::before{
         left: 5px;
         font-size: 64px;
     }
+}
+
+@media only screen and (max-width: 426px){
+    .btn.button{
+        font-size: 14px;
+    }
+    h5{
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 375px){
+    .btn.button{
+        font-size: 12px;
+    }
+    h5{
+        font-size: 16px;
+    }
+
+    #work-1:hover::after, #work-2:hover::after, #work-3:hover::after{
+    font-size: 18px;
+}
 }
